force-app/main/default/objects/msmxSheet__MashmatrixOrgSetting__mdt/msmxSheet__MashmatrixOrgSetting__mdt.object-meta.xml
<CustomObject>
    <label>Mashmatrix Org Setting</label>
</CustomObject>