force-app/main/default/objects/msmxSheet__MashmatrixOrgSetting__mdt/fields/msmxSheet__AllOrNoneTransaction__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__AllOrNoneTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All or None Transaction</label>
    <type>Checkbox</type>
</CustomField>