force-app/main/default/objects/msmxSheet__MashmatrixOrgSetting__mdt/fields/msmxSheet__BulkCopyThreshold__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__BulkCopyThreshold__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Bulk-copy Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>