force-app/main/default/objects/msmxSheet__MashmatrixOrgSetting__mdt/fields/msmxSheet__ObjectLevelAccessControlEnabled__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__ObjectLevelAccessControlEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obejct-level Access Control Enabled</label>
    <type>Checkbox</type>
</CustomField>